--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: Deploy to Droplet
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch: {}
 
 jobs:
   deploy:
@@ -15,11 +13,16 @@ jobs:
           host: ${{ secrets.DO_HOST }}
           username: ${{ secrets.DO_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.DO_SSH_PORT || '22' }}
           script: |
             set -e
-            cd ${{ secrets.REPO_PATH }}
-            git fetch --all
-            git checkout master
-            git reset --hard origin/master
+            mkdir -p "${{ secrets.REPO_PATH }}"
+            cd "${{ secrets.REPO_PATH }}"
+            if [ ! -d .git ]; then
+              git clone -b "${{ secrets.BRANCH }}" git@github.com:calumbradley/bradleyco.git .
+            else
+              git fetch --all
+              git reset --hard origin/"${{ secrets.BRANCH }}"
+            fi
             docker compose -f docker-compose.prod.yml pull || true
             docker compose -f docker-compose.prod.yml up -d --build
