feat: Update Docker Compose and startup script to support Admin UI build process

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,7 @@ services:
       - NODE_ENV=production
       - DATABASE_URL=postgres://medusa:medusa@postgres:5432/medusa
       - REDIS_URL=redis://redis:6379
+      # - MEDUSA_ADMIN_DISABLED=true    # remove/keep commented to serve Admin UI
     # no bind mounts in prod so image contains the code and Dockerfile CMD runs ./start.sh
     networks:
       - medusa_network
