--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -2,26 +2,38 @@ name: Build and Push Image
 
 on:
   push:
-    branches:
-      - master
-  workflow_dispatch: {}
+    branches: [master] # build on master pushes
+  workflow_dispatch: {} # allow manual runs
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: read # checkout code
+      packages: write # push to GHCR
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      # 1) Checkout the repository
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # 2) Setup Docker Buildx (enables advanced build features)
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 3) Login to GHCR using the repo’s GITHUB_TOKEN
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+
+      # 4) Build and push the image (bakes Admin/UI and .medusa/server)
+      - name: Build and Push
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/medusa:latest
+          tags: |
+            ghcr.io/${{ github.repository }}/medusa:latest
+            ghcr.io/${{ github.repository }}/medusa:${{ github.sha }}
